AG-4976 Fix attentive dialog
Squashed commit of the following:

commit 39552e27b4beb4a0b49ab59a4c4c57808e4795d4
Author: ArtemBaskal <a.baskal@adguard.com>
Date:   Tue Nov 3 16:34:30 2020 +0300

    AG-4976 Align center modal description

commit 43737d0a7c3d9fb36e21dc3b82b2983ea4e874f5
Author: ArtemBaskal <a.baskal@adguard.com>
Date:   Tue Nov 3 16:22:56 2020 +0300

    AG-4976 Make modal size adaptive

commit d68163474160deec91d5fc5cba8954fe2ca93f33
Author: ArtemBaskal <a.baskal@adguard.com>
Date:   Mon Nov 2 18:42:19 2020 +0300

    AG-4976 Fix margins in the attentive dialog

--- a/src/options/components/Exclusions/settings.pcss
+++ b/src/options/components/Exclusions/settings.pcss
@@ -97,7 +97,7 @@
 
 .modal {
     width: 500px;
-    height: 334px;
+    min-height: 334px;
     background: var(--white);
     position: relative;
     top: 50%;
@@ -128,12 +128,14 @@
         letter-spacing: 0;
         line-height: 30px;
         margin-bottom: 8px;
+        text-align: center;
     }
 
     &__message {
         margin: 0 60px 24px;
         font-size: 16px;
         line-height: 22px;
+        text-align: center;
     }
 
     &__button {
@@ -147,7 +149,7 @@
         text-align: center;
         line-height: 16px;
         text-transform: uppercase;
-        margin-bottom: auto;
+        margin-bottom: 44px;
     }
 }
 
